# oclint-04

./: .gitignore  .gitmodules  404.html  CMakeLists.txt  CNAME  LICENSE  README  README.md  atom.xml  index.html  selfinspection.txt  sitemap.xml
blog/: index.html
lib/: CMakeLists.txt
lib/rule/: ASTVisitor.cpp  CMakeLists.txt  Violation.cpp
src/impl/: CMakeLists.txt  FileUtil.cpp  RuleViolation.cpp  SmellFinder.cpp  TraverseAST.cpp  main.cpp
src/impl/mo/: CMakeLists.txt  ClangInstance.cpp  RuleData.cpp  RuleSet.cpp  RuleViolation.cpp  SmellFinder.cpp  TraverseAST.cpp  Violation.cpp  ViolationSet.cpp
src/impl/mo/exception/: CMakeLists.txt  MOException.cpp  MessageBasedException.cpp
src/impl/mo/reporter/: CMakeLists.txt  PlainTextReporter.cpp
src/impl/mo/rule/: CMakeLists.txt  ConstantIfStatementRule.cpp  CyclomaticComplexityRule.cpp  EmptyIfStatementRule.cpp  IfStatementWithNegatedConditionRule.cpp  LongMethodRule.cpp  LongParameterListRule.cpp  NPathComplexityRule.cpp  RedundantIfStatementRule.cpp  RedundantLocalVariableRule.cpp  SwitchStatementRule.cpp  UnreachableCodeRule.cpp  UnusedFormalParameterRule.cpp  UnusedLocalVariableRule.cpp  UnusedMethodParameterRule.cpp
src/impl/mo/ruleset/: CMakeLists.txt  RuleSet.cpp
src/impl/mo/util/: CCNCounterUtil.cpp  CMakeLists.txt  CursorUtil.cpp  CyclomaticComplexityMeasurement.cpp  DeclUtil.cpp  FileUtil.cpp  NPathComplexityMeasurement.cpp  RuleUtil.cpp
src/impl/oclint/: CMakeLists.txt  ClangInstance.cpp  Driver.cpp  RuleConfiguration.cpp  RuleSet.cpp  SmellFinder.cpp  Version.cpp  Violation.cpp  ViolationSet.cpp
src/impl/oclint/driver/: Benchmark.cpp  CMakeLists.txt  Driver.cpp
src/impl/oclint/exception/: CMakeLists.txt  GenericException.cpp
src/impl/oclint/helper/: CMakeLists.txt  CursorHelper.cpp  CyclomaticComplexityMeasurement.cpp  DeclHelper.cpp  DriverHelper.cpp  NPathComplexityMeasurement.cpp  StringHelper.cpp
src/impl/oclint/reporter/: CMakeLists.txt  HTMLReporter.cpp  PlainTextReporter.cpp
src/impl/oclint/rule/: CMakeLists.txt  ConstantIfStatementRule.cpp  CyclomaticComplexityRule.cpp  EmptyIfStatementRule.cpp  IfStatementWithNegatedConditionRule.cpp  LongMethodRule.cpp  LongParameterListRule.cpp  NPathComplexityRule.cpp  RedundantIfStatementRule.cpp  RedundantLocalVariableRule.cpp  UnreachableCodeRule.cpp  UnusedLocalVariableRule.cpp  UnusedMethodParameterRule.cpp
src/impl/oclint/util/: CMakeLists.txt  CursorUtil.cpp  CyclomaticComplexityMeasurement.cpp  DeclUtil.cpp  NPathComplexityMeasurement.cpp
test/: CMakeLists.txt  CanaryTest.cpp  CanaryTest.h  MO_RULE_ASTVisitor.h  MO_RULE_ASTVisitorTest.h  MO_RULE_ViolationTest.h  MO_SmellFinderTest.cpp  MO_SmellFinderTest.h  MO_UTIL_FileUtilTest.cpp  MO_UTIL_FileUtilTest.h
test/headers/: CanaryTest.h
test/headers/mo/: ClangInstanceTest.h  RuleDataTest.h  RuleSetTest.h  RuleViolationTest.h  SmellFinderTest.h  StringSourceCode.h  TraverseASTTest.h  ViolationSetTest.h
test/headers/mo/exception/: MOExceptionTest.h
test/headers/mo/reporter/: MockReporter.h  PlainTextReporterTest.h
test/headers/mo/rule/: ConstantIfStatementRuleTest.h  CyclomaticComplexityRuleTest.h  EmptyIfStatementRuleTest.h  IfStatementWithNegatedConditionRuleTest.h  LongMethodRuleTest.h  LongParameterListRuleTest.h  MockRule.h  NPathComplexityRuleTest.h  RedundantIfStatementRuleTest.h  RedundantLocalVariableRuleTest.h  SwitchStatementRuleTest.h  UnreachableCodeRuleTest.h  UnusedFormalParameterRuleTest.h  UnusedLocalVariableRuleTest.h  UnusedMethodParameterRuleTest.h
test/headers/mo/util/: CCNCounterUtilTest.h  CursorExtractionUtil.h  CursorUtilTest.h  CyclomaticComplexityMeasurementTest.h  NPathComplexityMeasurementTest.h  StringSourceCodeToTranslationUnitUtil.h  TestCursorUtil.h
test/headers/oclint/: ClangInstanceTest.h  RuleConfigurationTest.h  RuleSetTest.h  SmellFinderTest.h  StringSourceCode.h  ViolationSetTest.h
test/headers/oclint/exception/: GenericExceptionTest.h
test/headers/oclint/helper/: CursorExtractionHelper.h  CursorHelperTest.h  CyclomaticComplexityMeasurementTest.h  DeclHelperTest.h  NPathComplexityMeasurementTest.h  StringHelperTest.h  StringSourceCodeToTranslationUnitHelper.h
test/headers/oclint/reporter/: HTMLReporterTest.h  MockReporter.h  PlainTextReporterTest.h
test/headers/oclint/rule/: ConstantIfStatementRuleTest.h  CyclomaticComplexityRuleTest.h  EmptyIfStatementRuleTest.h  IfStatementWithNegatedConditionRuleTest.h  LongMethodRuleTest.h  LongParameterListRuleTest.h  MockRule.h  NPathComplexityRuleTest.h  RedundantIfStatementRuleTest.h  RedundantLocalVariableRuleTest.h  UnreachableCodeRuleTest.h  UnusedLocalVariableRuleTest.h  UnusedMethodParameterRuleTest.h
test/headers/oclint/util/: CursorExtractionUtil.h  CursorUtilTest.h  CyclomaticComplexityMeasurementTest.h  DeclUtilTest.h  NPathComplexityMeasurementTest.h  StringSourceCodeToTranslationUnitUtil.h
test/impl/: CMakeLists.txt  CanaryTest.cpp  SmellFinderTest.cpp
test/impl/mo/: CMakeLists.txt  ClangInstanceTest.cpp  RuleDataTest.cpp  RuleSetTest.cpp  RuleViolationTest.cpp  SmellFinderTest.cpp  TraverseASTTest.cpp  ViolationSetTest.cpp
test/impl/mo/exception/: CMakeLists.txt  MOExceptionTest.cpp
test/impl/mo/reporter/: CMakeLists.txt  MockReporter.cpp  PlainTextReporterTest.cpp
test/impl/mo/rule/: CMakeLists.txt  ConstantIfStatementRuleTest.cpp  CyclomaticComplexityRuleTest.cpp  EmptyIfStatementRuleTest.cpp  IfStatementWithNegatedConditionRuleTest.cpp  LongMethodRuleTest.cpp  LongParameterListRuleTest.cpp  MockRule.cpp  NPathComplexityRuleTest.cpp  RedundantIfStatementRuleTest.cpp  RedundantLocalVariableRuleTest.cpp  SwitchStatementRuleTest.cpp  UnreachableCodeRuleTest.cpp  (+3 more)
test/impl/oclint/: CMakeLists.txt  ClangInstanceTest.cpp  RuleConfigurationTest.cpp  RuleSetTest.cpp  SmellFinderTest.cpp  ViolationSetTest.cpp
test/mock/: MockDecl.h  MockDeclContext.h  MockRule.h  MockStmt.h  MockViolation.h
test/resource/: HelloWorld.m
test/rule/: ASTVisitorTest.cpp
test/samples/: CompilationFail.txt  CompilerDiagnostics.cpp  EmptyIfStatement.m  HelloWorld.m  SwitchStatement.m
(+548 files in other folders)
