add_library(MORuleTest
  EmptyIfStatementRuleTest.cpp
  UnusedLocalVariableRuleTest.cpp
  CyclomaticComplexityRuleTest.cpp
  LongParameterListRuleTest.cpp
  LongMethodRuleTest.cpp
  ConstantIfStatementRuleTest.cpp
  UnreachableCodeRuleTest.cpp
  NPathComplexityRuleTest.cpp
  IfStatementWithNegatedConditionRuleTest.cpp
  MockRule.cpp
  )
