add_library(OCLintRuleTest
  EmptyIfStatementRuleTest.cpp
  UnusedLocalVariableRuleTest.cpp
  UnusedMethodParameterRuleTest.cpp
  CyclomaticComplexityRuleTest.cpp
  LongParameterListRuleTest.cpp
  LongMethodRuleTest.cpp
  ConstantIfStatementRuleTest.cpp
  UnreachableCodeRuleTest.cpp
  NPathComplexityRuleTest.cpp
  IfStatementWithNegatedConditionRuleTest.cpp
  RedundantIfStatementRuleTest.cpp
  RedundantLocalVariableRuleTest.cpp
  MockRule.cpp
  )
